extern/PICM114GL/include/PCI_M114.h

// Auto Compare (Axis 0 & 1)
I16 PASCAL _m114_get_auto_compare_encoder(U16 SwitchCardNo, U16 AxisNo, I32 *EncPos);
I16 PASCAL _m114_set_auto_compare_encoder(U16 SwitchCardNo, U16 AxisNo, I32 EncPos);
I16 PASCAL _m114_set_auto_compare_source(U16 SwitchCardNo, U16 AxisNo, U16 SrcAxisNo);
I16 PASCAL _m114_get_auto_compare_count(U16 SwitchCardNo, U16 AxisNo, U16 *Count);
I16 PASCAL _m114_get_auto_compare_status(U16 SwitchCardNo, U16 AxisNo, U16 *OnOff);
I16 PASCAL _m114_set_auto_compare_trigger(U16 SwitchCardNo, U16 AxisNo, U16 Level, U16 Width);
I16 PASCAL _m114_set_auto_compare_function(U16 SwitchCardNo, U16 AxisNo, U8 Dir, I32 StrPos, I32 Interval, U16 TrgCnt);
I16 PASCAL _m114_set_auto_compare_table(U16 SwitchCardNo, U16 AxisNo, U8 Dir, U16 Size, I32 *Table);
I16 PASCAL _m114_get_auto_compare_table_capacity(U16 SwitchCardNo, U16 AxisNo, U16 *Size);
I16 PASCAL _m114_start_auto_compare(U16 SwitchCardNo, U16 AxisNo, U16 OnOff);
I16 PASCAL _m114_force_trigger_output(U16 SwitchCardNo, U16 AxisNo);
// Continuous Move
I16 PASCAL _m114_check_continuous_buffer(U16 SwitchCardNo, U16 AxisNo);
I16 PASCAL _m114_get_continuous_buffer_status(U16 SwitchCardNo, U16 AxisNo);
I16 PASCAL _m114_cancel_continuous_buffer(U16 SwitchCardNo, U16 AxisNo);