extern/PICM114GL/include/PCI_M114.cs


            // Continuous Move
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_check_continuous_buffer(ushort SwitchCardNo, ushort AxisNo);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_get_continuous_buffer_status(ushort SwitchCardNo, ushort AxisNo);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_cancel_continuous_buffer(ushort SwitchCardNo, ushort AxisNo);

            // Auto Compare(Axis 0 & 1)
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_get_auto_compare_encoder(ushort SwitchCardNo, ushort AxisNo, ref int EncPos);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_set_auto_compare_encoder(ushort SwitchCardNo, ushort AxisNo, int EncPos);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_get_auto_compare_count(ushort SwitchCardNo, ushort AxisNo, ref ushort Count);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_get_auto_compare_status(ushort SwitchCardNo, ushort AxisNo, ref ushort OnOff);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_set_auto_compare_trigger(ushort SwitchCardNo, ushort AxisNo, ushort Level, ushort Width);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_set_auto_compare_function(ushort SwitchCardNo, ushort AxisNo, byte Dir, int StrPos, int Interval, ushort TrgCnt);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_set_auto_compare_table(ushort SwitchCardNo, ushort AxisNo, byte Dir, ushort Size, int[] Table);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_start_auto_compare(ushort SwitchCardNo, ushort AxisNo, ushort OnOff);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_force_trigger_output(ushort SwitchCardNo, ushort AxisNo);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_set_auto_compare_source(ushort SwitchCardNo, ushort AxisNo, ushort SrcAxisNo);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_get_auto_compare_table_capacity(ushort SwitchCardNo, ushort AxisNo, ref ushort Size);

            //Interrupt
            //for Interrupt Support (PCE-M114GM only)
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_int_control(ushort SwitchCardNo, ushort IntType);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_int_wait(ushort SwitchCardNo, uint TimeoutInMs);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_int_check(ushort SwitchCardNo, ushort IntType, ushort IntAxes);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_set_int_factor(ushort SwitchCardNo, ushort AxisNo, uint IntFactor);
            [DllImport(DLLNAME)]
            public static extern ErrCode _m114_get_int_status(ushort SwitchCardNo, ushort AxisNo, uint ErrorInt, uint EventInt);

            
            
        }
    }
}
